# cohan_planner_people_interface

./: CMakeLists.txt  README.md  package.xml
src/: tracked_persons_to_cohan_node.cpp
